samples/_failures_safe/1761210988_dd998f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8de591c3.c: In function ‘main’:
./samples/SAFE/__tmp_8de591c3.c:154:9: error: expected declaration or statement at end of input
  154 |         add_edge(&g, u, v);
      |         ^~~~~~~~
./samples/SAFE/__tmp_8de591c3.c:154:9: error: expected declaration or statement at end of input
